Refactor LibProxyImpl class
* Removed the use of WeakReference
* Fixed the wrong image path conversion